--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up JDK 23
         uses: actions/setup-java@v4
         with:
-          java-version: '23'
+          java-version: '0.0.1-SNAPSHOT'
           distribution: 'temurin'
 
       # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
@@ -37,4 +37,4 @@ jobs:
         run: ls
 
       - name: Build with Gradle Wrapper
-        run: ./demo/gradlew build
+        run: cd demo; ./gradlew build;
