--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,21 @@ jobs:
 
       - name: Build with Gradle Wrapper
         run: cd demo; ./gradlew build;
+  test:
+    name: GradleTest
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: Setup JDK 23
+        uses: actions/setup-java@v4
+        with:
+          java-version: '23.0.0+37'
+          distribution: 'temurin'
+
+      - name: Grant Permissions to gradlew
+        run: chmod +x gradlew
+      - name: Test
+        run: ./demo/gradlew test --tests "*"
