--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Grant Permissions to gradlew
-        run: chmod +x gradlew
+        run:
+          cd demo 
+          chmod +x gradlew
       - name: Test
-        run: ./demo/gradlew test --tests "*"
+        run:
+          cd demo
+          ./gradlew test --tests "*"
